--- a/pages/8986.html
+++ b/pages/8986.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8646/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -449,15 +448,15 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#relation_to_free_algebras'>Relation to free algebras</a></li></ul></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#relation_to_free_algebras'>Relation to free algebras</a></li></ul></li><li><a href='#examples'>Examples</a></li><li><a href='#for_pointed_object_in_the_endofunctor_category'>For pointed object in the endofunctor category</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>An <a class='existingWikiWord' href='/nlab/show/endofunctor'>endofunctor</a> on a <a class='existingWikiWord' href='/nlab/show/category'>category</a> <math class='maruku-mathml' display='inline' id='mathml_3f1285170643f456ebaf53de87b5e91420e56938_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is <em>pointed</em> if it is a <a class='existingWikiWord' href='/nlab/show/pointed+object'>pointed object</a> in the <a class='existingWikiWord' href='/nlab/show/functor+category'>endofunctor category</a> in the sense that it is equipped with a morphism from the <a class='existingWikiWord' href='/nlab/show/identity'>identity</a> functor.</p>
+<p>An <a class='existingWikiWord' href='/nlab/show/endofunctor'>endofunctor</a> on a <a class='existingWikiWord' href='/nlab/show/category'>category</a> <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is <em>pointed</em> if it is equipped with a morphism from the <a class='existingWikiWord' href='/nlab/show/identity'>identity</a> functor.</p>
 
 <div class='num_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>An <a class='existingWikiWord' href='/nlab/show/endofunctor'>endofunctor</a> <math class='maruku-mathml' display='inline' id='mathml_3f1285170643f456ebaf53de87b5e91420e56938_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>:</mo><mi>𝒜</mi><mo>→</mo><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>S:\mathcal{A}\to \mathcal{A}</annotation></semantics></math> is called <strong>pointed</strong> if it is equipped with a <a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformation</a> <math class='maruku-mathml' display='inline' id='mathml_3f1285170643f456ebaf53de87b5e91420e56938_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>σ</mi><mo>:</mo><msub><mi>Id</mi> <mi>𝒜</mi></msub><mo>→</mo><mi>S</mi></mrow><annotation encoding='application/x-tex'>\sigma:Id_\mathcal{A} \to S</annotation></semantics></math>. It is called <strong>well-pointed</strong> if <math class='maruku-mathml' display='inline' id='mathml_3f1285170643f456ebaf53de87b5e91420e56938_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mi>σ</mi><mo>=</mo><mi>σ</mi><mi>S</mi></mrow><annotation encoding='application/x-tex'>S\sigma = \sigma S</annotation></semantics></math> (as natural transformations <math class='maruku-mathml' display='inline' id='mathml_3f1285170643f456ebaf53de87b5e91420e56938_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>→</mo><msup><mi>S</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>S\to S^2</annotation></semantics></math>).</p>
+<p>An <a class='existingWikiWord' href='/nlab/show/endofunctor'>endofunctor</a> <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>:</mo><mi>𝒜</mi><mo>→</mo><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>S:\mathcal{A}\to \mathcal{A}</annotation></semantics></math> is called <strong>pointed</strong> if it is equipped with a <a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformation</a> <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>σ</mi><mo>:</mo><msub><mi>Id</mi> <mi>𝒜</mi></msub><mo>→</mo><mi>S</mi></mrow><annotation encoding='application/x-tex'>\sigma:Id_\mathcal{A} \to S</annotation></semantics></math>. It is called <strong>well-pointed</strong> if <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mi>σ</mi><mo>=</mo><mi>σ</mi><mi>S</mi></mrow><annotation encoding='application/x-tex'>S\sigma = \sigma S</annotation></semantics></math> (as natural transformations <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>→</mo><msup><mi>S</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>S\to S^2</annotation></semantics></math>).</p>
 </div>
 
 <h2 id='properties'>Properties</h2>
@@ -468,7 +467,13 @@ margin-left: 0em;
 
 <h2 id='examples'>Examples</h2>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/monad'>monad</a> can be regarded as a pointed endofunctor where <math class='maruku-mathml' display='inline' id='mathml_3f1285170643f456ebaf53de87b5e91420e56938_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>σ</mi></mrow><annotation encoding='application/x-tex'>\sigma</annotation></semantics></math> is its unit. Such an endofunctor is well-pointed precisely when the monad is <a class='existingWikiWord' href='/nlab/show/idempotent+monad'>idempotent</a>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/monad'>monad</a> can be regarded as a pointed endofunctor where <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>σ</mi></mrow><annotation encoding='application/x-tex'>\sigma</annotation></semantics></math> is its unit. Such an endofunctor is well-pointed precisely when the monad is <a class='existingWikiWord' href='/nlab/show/idempotent+monad'>idempotent</a>.</p>
+
+<h2 id='for_pointed_object_in_the_endofunctor_category'>For pointed object in the endofunctor category</h2>
+
+<p>Notice that the statement which one might expect, that a pointed endofunctor is <a class='existingWikiWord' href='/nlab/show/pointed+object'>pointed object</a> in the <a class='existingWikiWord' href='/nlab/show/endofunctor'>endofunctor category</a> is not quite right in general.</p>
+
+<p>The terminal object of the category of endofunctors on <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> is the functor <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi></mrow><annotation encoding='application/x-tex'>T</annotation></semantics></math> which sends all objects to <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast</annotation></semantics></math> and all morphisms to the unique morphism <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo><mo>→</mo><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast \to \ast</annotation></semantics></math>, where <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast</annotation></semantics></math> is terminal object of category <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math>. So the pointed object in the endofunctor category should be a endofunctor <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>:</mo><mi>C</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>S:C \to C</annotation></semantics></math> equipped with a natural transformation <math class='maruku-mathml' display='inline' id='mathml_082ab560e822891366d34d9f3b4a73e100e9074f_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>σ</mi><mo>:</mo><mi>T</mi><mo>→</mo><mi>S</mi></mrow><annotation encoding='application/x-tex'>\sigma:T \to S</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -481,19 +486,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on December  6, 2012 12:41:34 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.169.65.155)
+  <p>
+  Last revised on June 20, 2018 at 20:22:59.
+  See the <a href="https://ncatlab.org/nlab/history/pointed endofunctor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/pointed+endofunctor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/pointed+endofunctor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pointed+endofunctor/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/pointed+endofunctor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pointed+endofunctor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/pointed endofunctor/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/pointed+endofunctor" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/pointed+endofunctor" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/pointed+endofunctor" id="view_source" rel="nofollow">Source</a>
