--- a/pages/15345.html
+++ b/pages/15345.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6240/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -354,7 +353,7 @@ margin-left: 0em;
 
 <p><em>Perfectoid spaces</em> are a variant of <a class='existingWikiWord' href='/nlab/show/Huber+space'>Huber spaces</a> in <a class='existingWikiWord' href='/nlab/show/analytic+geometry'>analytic geometry</a>. The concept was introduced (<a href='#Scholze11'>Scholze 11</a>) in order to generalize the classical theorem of (<a href='#FontaineWinterberger79'>Fontaine-Winterberger 79</a>) (see also at <em><a class='existingWikiWord' href='/nlab/show/function+field+analogy'>function field analogy</a></em>).</p>
 
-<p>This theorem establishes an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a> between the <a class='existingWikiWord' href='/nlab/show/absolute+Galois+group'>absolute Galois groups</a> of an extension of the <a class='existingWikiWord' href='/nlab/show/p-adic+number'>p-adic numbers</a> and of the <a class='existingWikiWord' href='/nlab/show/perfect+field'>perfection</a> of the field of <a class='existingWikiWord' href='/nlab/show/Laurent+series'>Laurent series</a> of the <a class='existingWikiWord' href='/nlab/show/finite+field'>finite field</a> <math class='maruku-mathml' display='inline' id='mathml_9144d323e4ad164cb5387e8df9a91067891a8594_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝔽</mi> <mi>p</mi></msub></mrow><annotation encoding='application/x-tex'>\mathbb{F}_p</annotation></semantics></math>. In (<a href='#Scholze11'>Scholze 11</a>) this is generalized by the statement that the perfectoid spaces over fields related this way are equivalent. (See <a href='#Bhatt14'>Bhatt 14</a> for a review).</p>
+<p>This theorem establishes an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a> between the <a class='existingWikiWord' href='/nlab/show/absolute+Galois+group'>absolute Galois groups</a> of an extension of the <a class='existingWikiWord' href='/nlab/show/p-adic+number'>p-adic numbers</a> and of the <a class='existingWikiWord' href='/nlab/show/perfect+field'>perfection</a> of the field of <a class='existingWikiWord' href='/nlab/show/Laurent+series'>Laurent series</a> of the <a class='existingWikiWord' href='/nlab/show/finite+field'>finite field</a> <math class='maruku-mathml' display='inline' id='mathml_d60dd58d29286f3879451793b5623c8c8f899886_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝔽</mi> <mi>p</mi></msub></mrow><annotation encoding='application/x-tex'>\mathbb{F}_p</annotation></semantics></math>. In (<a href='#Scholze11'>Scholze 11</a>) this is generalized by the statement that the perfectoid spaces over fields related this way are equivalent. (See <a href='#Bhatt14'>Bhatt 14</a> for a review).</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -404,7 +403,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Bhargav+Bhatt'>Bhargav Bhatt</a>, <em>Lecture notes for a class on perfectoid spaces</em>, (<a href='/http://www-personal.umich.edu/~bhattb/teaching/mat679w17/lectures.pdf'>pdf</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Bhargav+Bhatt'>Bhargav Bhatt</a>, <em>Lecture notes for a class on perfectoid spaces</em>, (<a href='http://www-personal.umich.edu/~bhattb/teaching/mat679w17/lectures.pdf'>pdf</a>)</p>
 </li>
 
 <li>
@@ -417,19 +416,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July  7, 2017 12:11:12 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (79.53.135.148)
+  <p>
+  Last revised on June 22, 2018 at 02:20:53.
+  See the <a href="https://ncatlab.org/nlab/history/perfectoid space" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/perfectoid+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/perfectoid+space/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/perfectoid+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/perfectoid+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/perfectoid+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/perfectoid+space/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/perfectoid+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/perfectoid+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/perfectoid space/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/perfectoid+space" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/perfectoid+space" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/perfectoid+space" id="view_source" rel="nofollow">Source</a>
