--- a/pages/1073.html
+++ b/pages/1073.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -571,7 +570,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+geometric+morphism'>étale geometric morphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+geometric+morphism'>étale geometric morphism</a></p>
 </li>
 
 <li>
@@ -744,7 +743,7 @@ margin-left: 0em;
 
 <p>In light of the <a class='existingWikiWord' href='/nlab/show/Dold-Kan+correspondence'>Dold-Kan correspondence</a> this means that abelian sheaves can usefully be regarded as special cases of <a class='existingWikiWord' href='/nlab/show/simplicial+presheaf'>simplicial presheaves</a> and in particular the corresponding <a class='existingWikiWord' href='/nlab/show/derived+category'>derived category</a> of abelian sheaves, traditionally mainly investigated in terms of <a class='existingWikiWord' href='/nlab/show/sheaf+cohomology'>sheaf cohomology</a>, is analogous to the <a class='existingWikiWord' href='/nlab/show/homotopy+category'>homotopy category</a> of abelian <a class='existingWikiWord' href='/nlab/show/infinity-stack+homotopically'>infinity-stacks</a>. In this way, via <a class='existingWikiWord' href='/nlab/show/Dold-Kan+correspondence'>Dold-Kan</a>, plain abelian sheaves already go a long way towards (abelian) <a class='existingWikiWord' href='/nlab/show/Higher+Topos+Theory'>Higher Topos Theory</a>, which is one way of understanding the relevance of the concept of abelian sheaves.</p>
 
-<p>For instance <a class='existingWikiWord' href='/nlab/show/Deligne+cohomology'>Deligne cohomology</a>, which classifies higher abelian <a class='existingWikiWord' href='/nlab/show/gerbe'>gerbe</a>s (certain <a class='existingWikiWord' href='/nlab/show/infinity-stack'>infinity-stack</a>s) with <a class='existingWikiWord' href='/nlab/show/connection'>connection</a>), is the <a class='existingWikiWord' href='/nlab/show/sheaf+cohomology'>sheaf cohomology</a> of a certain class of sheaves with values in abelian complexes. This is understood conceptually by realizing that after embedding complexes of abelian sheaves – via <a class='existingWikiWord' href='/nlab/show/Dold-Kan+correspondence'>Dold-Kan</a> – into general <a class='existingWikiWord' href='/nlab/show/simplicial+presheaf'>simplicial sheaves</a>, a complex of abelian sheaves becomes an abelian <math class='maruku-mathml' display='inline' id='mathml_9fcff5478daddc6a0470afbb30e30e71c7378d6b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-prestack and the computation of its <a class='existingWikiWord' href='/nlab/show/sheaf+cohomology'>sheaf cohomology</a> corresponds to passing to its <a class='existingWikiWord' href='/nlab/show/infinity-stackification'>infinity-stackification</a>.</p>
+<p>For instance <a class='existingWikiWord' href='/nlab/show/Deligne+cohomology'>Deligne cohomology</a>, which classifies higher abelian <a class='existingWikiWord' href='/nlab/show/gerbe'>gerbe</a>s (certain <a class='existingWikiWord' href='/nlab/show/infinity-stack'>infinity-stack</a>s) with <a class='existingWikiWord' href='/nlab/show/connection'>connection</a>), is the <a class='existingWikiWord' href='/nlab/show/sheaf+cohomology'>sheaf cohomology</a> of a certain class of sheaves with values in abelian complexes. This is understood conceptually by realizing that after embedding complexes of abelian sheaves – via <a class='existingWikiWord' href='/nlab/show/Dold-Kan+correspondence'>Dold-Kan</a> – into general <a class='existingWikiWord' href='/nlab/show/simplicial+presheaf'>simplicial sheaves</a>, a complex of abelian sheaves becomes an abelian <math class='maruku-mathml' display='inline' id='mathml_772e5f08e766f09a9c61d78c223d4f90c7916075_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-prestack and the computation of its <a class='existingWikiWord' href='/nlab/show/sheaf+cohomology'>sheaf cohomology</a> corresponds to passing to its <a class='existingWikiWord' href='/nlab/show/infinity-stackification'>infinity-stackification</a>.</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -756,6 +755,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><span class='newWikiWord'>sheaf on a topological space<a href='/nlab/new/sheaf+on+a+topological+space'>?</a></span></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a></p>
 </li>
 
@@ -764,7 +767,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>an abelian sheaf of <a class='existingWikiWord' href='/nlab/show/torsion+group'>torsion groups</a> is called a <em><a class='existingWikiWord' href='/nlab/show/torsion+sheaf'>torsion sheaf</a></em></p>
+<p>an abelian sheaf of <a class='existingWikiWord' href='/nlab/show/torsion+subgroup'>torsion groups</a> is called a <em><a class='existingWikiWord' href='/nlab/show/torsion+sheaf'>torsion sheaf</a></em></p>
 </li>
 </ul>
 
@@ -787,19 +790,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 24, 2013 07:58:16 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.137.79)
+  <p>
+  Last revised on June 22, 2018 at 03:53:17.
+  See the <a href="https://ncatlab.org/nlab/history/abelian sheaf" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/abelian+sheaf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/abelian+sheaf/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/abelian+sheaf" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/abelian+sheaf" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/abelian+sheaf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/abelian+sheaf/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/abelian+sheaf" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/abelian+sheaf" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/abelian sheaf/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/abelian+sheaf" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/abelian+sheaf" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/abelian+sheaf" id="view_source" rel="nofollow">Source</a>
