--- a/pages/19474.html
+++ b/pages/19474.html
@@ -309,11 +309,15 @@ margin-left: 0em;
 <div id="revision">
     <h2 id='idea'>Idea</h2>
 
-<p><strong>Guarded recursion</strong> is a method for ensuring that self-referential descriptions of objects define a unique object. The recursion is “guarded” by a <em>later</em> <a class='existingWikiWord' href='/nlab/show/modality'>modality</a>. (There are other forms of guarded recursion which act through syntactic restriction.)</p>
+<p><strong>Guarded recursion</strong> is a method for ensuring that self-referential descriptions of objects define a unique object. The recursion is typical “guarded” by a <em>later</em> <a class='existingWikiWord' href='/nlab/show/modality'>modality</a>, ensuring <em>productivity</em> of programs. (There are other forms of guarded recursion which act through syntactic restriction.)</p>
 
 <h2 id='references'>References</h2>
 
 <ul>
+<li>
+<p>Robert Atkey, Conor McBride, <em>Productive Coprogramming with Guarded Recursion</em>, (<a href='https://bentnib.org/productive.pdf'>Productive Coprogramming with Guarded Recursion</a>)</p>
+</li>
+
 <li>
 <p>Aleš Bizjak, <em>On Semantics and Applications of Guarded Recursion</em>, (<a href='http://www.cs.au.dk/~abizjak/documents/thesis/semantics-applications-gr.pdf'>PhD thesis</a>)</p>
 </li>
@@ -334,14 +338,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on June 22, 2018 at 06:50:38.
+  Last revised on June 22, 2018 at 08:37:19.
   See the <a href="https://ncatlab.org/nlab/history/guarded recursion" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/guarded+recursion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/guarded+recursion/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/guarded+recursion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/guarded+recursion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/guarded+recursion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/guarded+recursion/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/guarded+recursion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/guarded+recursion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/guarded recursion/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
