--- a/pages/82.html
+++ b/pages/82.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8662/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -481,7 +480,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+geometric+morphism'>étale geometric morphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+geometric+morphism'>étale geometric morphism</a></p>
 </li>
 
 <li>
@@ -907,8 +906,14 @@ margin-left: 0em;
 <h3 id='history'>History</h3>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Colin+McLarty'>Colin McLarty</a>, <em>The Uses and Abuses of the History of Topos Theory</em> , Brit. J. Phil. Sci., 41 (1990) (<a href='http://www.jstor.org/stable/687825'>JSTOR</a>) <a href='http://bjps.oxfordjournals.org/content/41/3/351.full.pdf'>PDF</a></p>
+<li><a class='existingWikiWord' href='/nlab/show/Colin+McLarty'>Colin McLarty</a>, <em>The Uses and Abuses of the History of Topos Theory</em> , Brit. J. Phil. Sci., 41 (1990) (<a href='http://www.jstor.org/stable/687825'>JSTOR</a>) <a href='http://bjps.oxfordjournals.org/content/41/3/351.full.pdf'>PDF</a></li>
+</ul>
+
+<p>A historical analysis of Grothendieck’s 1973 Buffalo lecture series on toposes and their precedents is in</p>
+
+<ul>
+<li id='McLarty18'>
+<p><a class='existingWikiWord' href='/nlab/show/Colin+McLarty'>Colin McLarty</a>, <em>Grothendieck’s 1973 topos lectures</em>, Séminaire Lectures grothendieckiennes, 3 May (2018) (<a href='https://www.youtube.com/watch?v=hhWT5V0oaSI'>YouTube video</a>)</p>
 </li>
 
 <li>
@@ -923,19 +928,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 27, 2017 07:22:15 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.53.179)
+  <p>
+  Last revised on June 25, 2018 at 03:10:49.
+  See the <a href="https://ncatlab.org/nlab/history/sheaf and topos theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/sheaf+and+topos+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sheaf+and+topos+theory/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/sheaf+and+topos+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sheaf+and+topos+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/sheaf+and+topos+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sheaf+and+topos+theory/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/sheaf+and+topos+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sheaf+and+topos+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/sheaf and topos theory/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/sheaf+and+topos+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/sheaf+and+topos+theory" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/sheaf+and+topos+theory" id="view_source" rel="nofollow">Source</a>
